crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__admin__challenge_existing.snap
---
source: crates/engram-cli/tests/cli/snapshot/admin.rs
expression: "f.run(&[\"challenge\", &id, \"-e\", \"Contradicted by the new benchmark.\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] challenge [UUID] -e Contradicted by the new benchmark.
exit: 0
--- stdout ---
{
  "message": "Challenged memory [UUID] (status: Challenged, 1 total challenges)",
  "success": true
}
--- stderr ---
