crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__admin__challenge_unknown_id_fails.snap
---
source: crates/engram-cli/tests/cli/snapshot/admin.rs
expression: "f.run(&[\"challenge\", \"no-such-memory\", \"-e\", \"Because.\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] challenge no-such-memory -e Because.
exit: 1
--- stdout ---
--- stderr ---
Error: Memory not found: no-such-memory
