crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__admin__compress_with_threshold.snap
---
source: crates/engram-cli/tests/cli/snapshot/admin.rs
expression: "f.run(&[\"compress\", \"--threshold\", \"0.1\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] compress --threshold 0.1
exit: 0
--- stdout ---
{
  "candidates": [],
  "threshold": 0.1,
  "total": 0
}
--- stderr ---
