crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__admin__config_uninitialized.snap
---
source: crates/engram-cli/tests/cli/snapshot/admin.rs
expression: "f.run(&[\"config\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] config
exit: 1
--- stdout ---
--- stderr ---
Error: IO error: No such file or directory (os error 2)

Caused by:
    No such file or directory (os error 2)
