crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__admin__gc_confirmed.snap
---
source: crates/engram-cli/tests/cli/snapshot/admin.rs
expression: "f.run(&[\"gc\", \"--confirm\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] gc --confirm
exit: 0
--- stdout ---
{
  "count": 0,
  "dry_run": false,
  "maintenance": {
    "bytes_removed": 0,
    "old_versions_removed": 0
  },
  "removed": [],
  "skipped": [],
  "stale_entries": 0
}
--- stderr ---
