crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__admin__gc_dry_run.snap
---
source: crates/engram-cli/tests/cli/snapshot/admin.rs
expression: "f.run(&[\"gc\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] gc
exit: 0
--- stdout ---
{
  "count": 0,
  "dry_run": true,
  "maintenance": null,
  "removed": [],
  "skipped": [],
  "stale_entries": 0
}
--- stderr ---
