crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__admin__migrate_applied.snap
---
source: crates/engram-cli/tests/cli/snapshot/admin.rs
expression: "f.run(&[\"migrate\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] migrate
exit: 0
--- stdout ---
{
  "message": "All 3 memories are already at v2. Nothing to migrate."
}
--- stderr ---
